# lanchesterAPP

./: .gitignore  CHECKPOINT.md  CMakeLists.txt  DEUDA_TECNICA.md  Makefile  Makefile.gui  PLAN.md  PLAN_ADAPTACION_DOCX.md  PLAN_DE_PRUEBAS.md  PLAN_INTERFAZ.md  PLAN_INTERFAZ_GRAFICA.md  PLAN_REFACTORIZACION.md  Plan_Port_Lanchester_CPP.md  README.md  Resumen_tecnico_Lancaster_ANONIMIZADO.docx  VALIDACION_PLAN.md  VALIDACION_SESION3.md  build_windows.ps1  gui_main.cpp  lanchester_io.h  lanchester_model.h  lanchester_types.h  main.cpp  model_params.json  setup_gui_deps.sh  vehicle_db.json
calibration/: calibrate.py  reference_data.json
calibration/scenarios/: ref_001.json
cmake/: mingw-w64-toolchain.cmake
data/: gui_config.json  model_params.json
ejemplos/: compania_mixta.json  sweep_count.sh  sweep_distancia.sh  sweep_engagement.sh  toa_vs_t80u.json
release/: lanchester
src/application/: lanchester_io.h  scenario_config.cpp  scenario_config.h  simulation_service.cpp  simulation_service.h
src/domain/: combat_utils.cpp  combat_utils.h  lanchester_model.h  lanchester_model_iface.h  lanchester_types.h  model_factory.cpp  model_factory.h  model_params.cpp  model_params.h  model_params_iface.h  montecarlo_runner.cpp  montecarlo_runner.h  square_law_model.cpp  square_law_model.h  vehicle_catalog.cpp  vehicle_catalog.h  vehicle_catalog_iface.h
src/tests/: test_main.cpp  test_model_params.cpp  test_simulation_service.cpp  test_square_law.cpp  test_vehicle_catalog.cpp
src/tests/data/: model_params.json  test_01_symmetric.json  test_02_overwhelming.json  test_03_no_cc.json  test_04_out_of_range.json  test_05_aft_casualties.json  test_06_defense_mult.json  test_07_mixed_forces.json  test_08_engagement_fraction.json  test_09_analytical.json  vehicle_db_en.json
src/ui/: gui_config.cpp  gui_config.h  gui_log.h  gui_main.cpp  gui_nav_bar.h  gui_state.h  gui_step_scenario.h  gui_step_side.h  gui_step_simulation.h
tests/: run_validation.sh  test_01_symmetric.json  test_02_overwhelming.json  test_analytical_verify.py  test_montecarlo_validation.py
